personaje_caminando_actualizacion

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
         .caminar {
             width: 200px;
-            height: 600px;
-            background: url("personaje-caminando.png") repeat-x;
-            background-size: 800px 350px;
-            animation: caminar 1s steps(4) infinite;
+            height: 500px;
+            background: url("valen-camina.png") repeat-x;
+            background-size: 900px 350px;
+            animation: caminar 0.5s steps(4) infinite;
             transform-origin: bottom right;
         }
 
